<resources>

    <string name="app_name">NotifyMe</string>
    <string name="user">User</string>
    <string name="password">Password</string>
     <string name="repeatPassword">Repeat Password</string>
    <string name="remember">Remember me</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    
     <string name="name">Name</string>
     
     <string name="subject">Subject</string>
     <string name="image">Image</string>
     
       <string name="create">Create</string>
    
    <string name="not">Not</string>
    
    <string name="icon">icon</string>
    
    
    <string name="newGroup">New Group</string>
    
    <string name="newNot">New Not</string>
    
     <string name="addGroup">Add Group</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

</resources>